fix overflow

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ input, #def {
     text-align: center;
     border: none;
     font-size: 8vw;
-    margin: 0px;
+    margin: 0%;
 }
 
 mark {
@@ -22,11 +22,15 @@ mark {
 }
 
 h2, img {
-    padding: 1%;
     width: 10vw;
     height: 10vw;
     font-size: 10vw;
-    margin: 4% 0 4% 0;
+    margin: 4% 0% 4% 0%;
+}
+
+figure {
+    padding: 1%;
+    margin: 0;
 }
 
 h2 {
